--- a/FrontEnd/css/styles.css
+++ b/FrontEnd/css/styles.css
@@ -52,6 +52,15 @@
 @media (max-width: 575.98px) {
   .navbar-brand img { max-height: 60px; }
 }
+/* Desktop: position logo on the left */
+@media (min-width: 992px) {
+  .navbar-brand {
+    position: relative;
+    left: 0;
+    transform: none;
+    padding-left: 0;
+  }
+}
 
 /* Carousel image fit */
 .carousel-item img { object-fit: cover; width:100%; max-height: 70vh; }
