--- a/FrontEnd/css/styles.css
+++ b/FrontEnd/css/styles.css
@@ -60,6 +60,9 @@
     transform: none;
     padding-left: 0;
   }
+  .navbar-nav {
+    margin-left: auto !important;
+  }
 }
 
 /* Carousel image fit */
