--- a/FrontEnd/css/styles.css
+++ b/FrontEnd/css/styles.css
@@ -110,10 +110,15 @@
 }
 
 .carousel-tag {
-  font-size: 18px;
-  font-weight: 500;
+  font-size: 40px;
+  font-weight: 700;
   margin-bottom: 10px;
-  color: #fff;
+  color: #28a745;
+  white-space: nowrap;
+}
+
+.tag-highlight {
+  color: #ffc107;
 }
 
 .carousel-title {
