--- a/FrontEnd/css/styles.css
+++ b/FrontEnd/css/styles.css
@@ -113,12 +113,19 @@
   font-size: 40px;
   font-weight: 700;
   margin-bottom: 10px;
-  color: #28a745;
   white-space: nowrap;
+}
+
+.tag-green {
+  color: #28a745;
+  border-bottom: 3px solid #28a745;
+  padding-bottom: 8px;
 }
 
 .tag-highlight {
   color: #ffc107;
+  border-bottom: 3px solid #ffc107;
+  padding-bottom: 8px;
 }
 
 .carousel-title {
